--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -72,6 +72,7 @@
     "swr": "^1.3.0",
     "threads": "^1.7.0",
     "uuid": "^9.0.0",
+    "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
